# homelab-mcp-bundle

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PERSONA_DE.md  PERSONA_ECHO_LOG.md  PERSONA_EN.md  PROJECT.md  README-DE.md  README.md  REPORT_ECHO_LOG_INTEGRATION.md  SECURITY_NOTES.md  __init__.py  __main__.py  base.py  cli_bridge_config.yaml  config.py  launcher.py  persona_prompt_DRAFT.md
adguard-mcp/: README.md  claude_desktop_config.example.json  server.py
automation/: README.md  email_7day_sequence.md  n8n_ai_checklist_delivery.json  n8n_linkedin_post.json  n8n_rapidmail_doi_confirm.json  n8n_rapidmail_optin.json  n8n_rapidmail_welcome_mail.json  n8n_twitter_post.json
backends/: __init__.py  claude.py  codex.py  copilot.py  echo_log.py  gemini.py  openai_codex.py
docs/: CEO_BRIEFING_2026-02-26.md  CODEX_SUBAGENT.md  DISTRIBUTION_STRATEGY.md  JIM02_RESEARCH_SUMMARY.md  LOCALAIMASTER_RESEARCH.md  MCP_OPENCLAW_STRATEGY.md  MCP_RELEASE_CHECKLIST.md  REDDIT_LOCALLAMA_EU_DRAFT.md  SPRINT_2026-02-25.md  SPRINT_2026-03-04.md  cloudflare-tunnel-QUICKSTART.md  cloudflare-tunnel-setup.md  joe-blocker-1pager.md
docs/evidence/: P0-SEC-01.md
grafana-mcp/: README.md  claude_desktop_config.example.json  server.py
ideas/: MCP_SKILLS_RESEARCH.md  SKILL_MARKETPLACES.md
ideas/market-research/: ANALYSE.md
lead-magnet/: ai-checklist-lead-magnet.md  ai-readiness-checklist-v2.html  lead-magnet-ai-agents-guide.md
marketing/: AFFILIATE_CONCEPT.md  ANALYTICS_DASHBOARD_MOCKUP.md  LAUNCH_CHECKLIST.md  MCP_LAUNCH_CONTENT.md  PRICING_COMPARISON.md  PRODUCT_HUNT_DRAFT.md  PRODUCT_INFOGRAPHICS.md  blog-article-docker-swarm.md  blog-article-mcp-servers.md  devto-article-mcp-homelab.md  devto-article.md  hn-draft.md  twitter-thread.md
marketing/email-sequence/: email-01-welcome.md  email-02-mcp-use-cases.md  email-03-playbook-offer.md  email-1-willkommen.md  email-2-mcp-use-cases.md  email-3-playbook-soft-sell.md  email-purchase-onboarding.md
mattermost-mcp/: README.md  claude_desktop_config.example.json  server.py  test.py
mcp-servers/: README.md
mcp-servers/adguard-mcp/: .env.example  claude_desktop_config.example.json  pyproject.toml
mcp-servers/adguard-mcp/src/adguard_mcp/: __init__.py  server.py
mcp-servers/grafana-mcp/: .env.example  claude_desktop_config.example.json  pyproject.toml  server.py
mcp-servers/grafana-mcp/src/grafana_mcp/: __init__.py  server.py
mcp-servers/mattermost-mcp/: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml
mcp-servers/mattermost-mcp/src/mattermost_mcp/: __init__.py  server.py
mcp-servers/n8n-mcp/: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml
mcp-servers/n8n-mcp/src/n8n_mcp/: __init__.py  server.py
mcp-servers/ollama-mcp/: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml
mcp-servers/ollama-mcp/src/ollama_mcp/: __init__.py  server.py
mcp-servers/portainer-mcp/: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml
mcp-servers/portainer-mcp/src/portainer_mcp/: __init__.py  server.py
mcp-servers/proxmox-mcp/: .env.example  README.md  claude_desktop_config.example.json  pyproject.toml
mcp-servers/proxmox-mcp/src/proxmox_mcp/: __init__.py  server.py
mcp-servers/uptime-kuma-mcp/: .env.example  .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
mcp-servers/uptime-kuma-mcp/src/uptime_kuma_mcp/: __init__.py  server.py
n8n-mcp/: README.md  claude_desktop_config.example.json  server.py  test.py
ollama-mcp/: README.md  claude_desktop_config.example.json  server.py
portainer-mcp/: README.md  claude_desktop_config.example.json  server.py
products/: COVER-IMAGE-SPECS.md  EN_PRODUCT_DESCRIPTIONS.md  GUMROAD_MCP_LISTING.md  lead-magnet-mcp-quickstart.md
products/ai-agent-team-blueprint/: GUMROAD_LISTING.md  README.md
products/cover-templates/: SCREENSHOT-ANLEITUNG.md  cover-ai-agent-blueprint-sq2.html  cover-dsgvo-art30-bundle-sq2.html  cover-dsgvo-art30-bundle.html  cover-grafana-dashboard-pack-sq2.html  cover-grafana-dashboard-pack.html  cover-homelab-mcp-bundle-sq2.html  cover-localai-playbook-banner.html  cover-localai-playbook-sq2.html  cover-mcp-cheat-sheet-sq2.html  cover-mcp-cheat-sheet.html  cover-n8n-starter-bundle-sq2.html  cover-n8n-starter-bundle.html
products/dsgvo-art30-template/: GUMROAD_LISTING.md
products/grafana-dashboard-pack/: 01_infrastructure-overview.json  02_docker-swarm-cluster.json  03_node-exporter-full.json  04_network-overview.json  05_services-status.json  06_alerts-overview.json  GUMROAD_LISTING.md  INSTALL_GUIDE.md  README.md  import-all.sh
products/i18n/: de.json  en.json
products/n8n-starter-bundle/: 01_stripe-download-delivery.json  02_ollama-llm-analysis.json  03_dsgvo-art30-tracker.json  GUMROAD_LISTING.md  README.md
products/webshop-listings/: README.md  _TEMPLATE.md  ai-agent-blueprint.md  dsgvo-art30-bundle.md  grafana-dashboard-pack.md  homelab-mcp-bundle.md  komplett-bundle.md  n8n-starter-bundle.md  playbook-local-ai.md
proxmox-mcp/: README.md  claude_desktop_config.example.json  server.py  test.py
scripts/: reddit_praw_post.py  secret-scan.mjs
skills/: SKILLS_INDEX.md  cover-generator.sh
skills/brand-media-gen/: SKILL.md
skills/copywriter-ai/: SKILL.md
skills/cover-generator/: SKILL-thumbnails.md  SKILL.md  cover-generator.sh
skills/gemini-brand-gen/: SKILL.md
skills/postiz/.clawhub/: origin.json
skills/qa-product-check/: SKILL.md
skills/release-workflow/: SKILL.md
tools/: cloudflare-tunnel-stack.yml  mcp_bundle_CHANGELOG.md  playbook_tts_pipeline.py
tools/copywriter-ai/: copywriter.py
tools/cover-generator/: SKILL-thumbnails.md  SKILL.md  gen_covers_v2.py  gen_covers_v4.py  gen_covers_v5.py  gen_thumbnails_v12.py
tools/download-issuer/: app.py
tools/gemini-brand-gen/: SKILL.md  brand_gen.py  brand_kit_default.json
tools/qa-product-check/: qa_check.py
tools/release-workflow/: release.sh
uptime-kuma-mcp/: README.md  claude_desktop_config.example.json  server.py
(+30 files in other folders)
