[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adguard-mcp"
version = "0.1.0"
description = "AdGuard Home MCP Server — DNS filtering and ad-blocking management from any MCP-capable AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["adguard", "dns", "adblocking", "filtering", "mcp", "ai", "llm", "model-context-protocol", "homelab"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
adguard-mcp = "adguard_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/adguard_mcp"]
