[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mattermost-mcp"
version = "0.1.0"
description = "Mattermost MCP Server — Read, post and search Mattermost from any MCP-capable AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mattermost", "mcp", "ai", "llm", "model-context-protocol"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mattermost-mcp = "mattermost_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/mattermost_mcp"]
