[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n8n-mcp"
version = "0.1.0"
description = "n8n MCP Server — List, trigger and monitor n8n workflows from any MCP-capable AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["n8n", "mcp", "ai", "llm", "model-context-protocol", "workflow", "automation"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
n8n-mcp = "n8n_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/n8n_mcp"]
