[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ollama-mcp"
version = "0.1.0"
description = "Ollama MCP Server — List models, generate text, chat and pull new models via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ollama", "mcp", "ai", "llm", "model-context-protocol"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ollama-mcp = "ollama_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_mcp"]
