[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portainer-mcp"
version = "0.1.0"
description = "Portainer MCP Server — Manage Docker Swarm services, stacks and nodes from any MCP-capable AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["portainer", "docker", "swarm", "mcp", "ai", "llm", "model-context-protocol", "devops", "homelab"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
portainer-mcp = "portainer_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/portainer_mcp"]
