[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxmox-mcp"
version = "0.1.0"
description = "Proxmox MCP Server — Manage VMs, LXCs and nodes via MCP from any AI assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["proxmox", "mcp", "ai", "llm", "model-context-protocol", "homelab", "virtualization"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
proxmox-mcp = "proxmox_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/proxmox_mcp"]
