[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uptime-kuma-mcp"
version = "0.1.0"
description = "Uptime Kuma MCP Server — Monitor service health and uptime via MCP from any AI assistant"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["uptime-kuma", "monitoring", "mcp", "ai", "llm", "model-context-protocol", "homelab"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
uptime-kuma-mcp = "uptime_kuma_mcp.server:main"

[project.urls]
Homepage = "https://ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"

[tool.hatch.build.targets.wheel]
packages = ["src/uptime_kuma_mcp"]
